Fix dark mode bug

--- a/static/css/channels.css
+++ b/static/css/channels.css
@@ -73,7 +73,6 @@ table.channels-table > tbody > tr > th {
 
 .edit-checks:hover {
     text-decoration: none;
-    color: #000;
 }
 
 .channel-row .actions {
